force-app/main/default/objects/Taxonomy_Automation_Runtime_Check__c/Taxonomy_Automation_Runtime_Check__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores runtime state for the Taxonomy Automation process.
This setting is used by Apex batches and Platform Event triggers to determine whether the Taxonomy run is currently in progress.</description>
    <label>Taxonomy Automation Runtime Check</label>
</CustomObject>