force-app/main/default/objects/Taxonomy_Automation_Runtime_Check__c/fields/Is_Taxonomy_Running__c.field-meta.xml
<CustomField>
    <fullName>Is_Taxonomy_Running__c</fullName>
    <defaultValue>false</defaultValue>
    <description>“Identifies whether Taxonomy Automation is currently running across chained batches.</description>
    <inlineHelpText>“Identifies whether Taxonomy Automation is currently running across chained batches.</inlineHelpText>
    <label>Is Taxonomy Running</label>
    <type>Checkbox</type>
</CustomField>