force-app/main/default/objects/Taxonomy_Automation_Runtime_Check__c/fields/Taxonomy_Automation_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Taxonomy_Automation_End_DateTime__c</fullName>
    <description>Stores the end timestamp after the final Taxonomy Automation batch completes.</description>
    <inlineHelpText>Stores the end timestamp after the final Taxonomy Automation batch completes.</inlineHelpText>
    <label>Taxonomy Automation End DateTime</label>
    <type>DateTime</type>
</CustomField>