force-app/main/default/objects/Taxonomy_Automation_Runtime_Check__c/fields/Taxonomy_Automation_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Taxonomy_Automation_Start_DateTime__c</fullName>
    <description>Stores the start timestamp of the most recent Taxonomy Automation run.</description>
    <inlineHelpText>Stores the start timestamp of the most recent Taxonomy Automation run.</inlineHelpText>
    <label>Taxonomy Automation Start DateTime</label>
    <type>DateTime</type>
</CustomField>